--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.15",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.11.1",
+    "postcss": "^8.4.29",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.3.3",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
