--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.11.1",
+    "pinia": "^2.1.7",
     "postcss": "^8.4.30",
     "sass": "^1.55.0",
     "tailwindcss": "^3.3.3",
