--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.16",
     "autoprefixer": "^10.4.16",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.11.1",
