--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.11.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-vue-next": "^0.336.0",
     "pinia": "^2.1.7",
     "postcss": "^8.4.30",
+    "radix-vue": "^1.4.8",
     "sass": "^1.55.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.4",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/node": "^20.11.20",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
     "vite": "^5.1.3",
