--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
@@ -28,7 +29,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-vue": "^3.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.23.0",
+    "prettier": "3.2.5",
     "typescript": "^4.6.4",
     "vite": "^5.1.3",
     "vue-tsc": "^0.40.4"
