--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
+    "@vee-validate/zod": "^4.12.6",
+    "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.11.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "lucide-vue-next": "^0.336.0",
+    "lucide-vue-next": "^0.359.0",
     "pinia": "^2.1.7",
     "postcss": "^8.4.30",
-    "radix-vue": "^1.4.8",
+    "radix-vue": "^1.5.3",
     "sass": "^1.55.0",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.12.6",
     "vue": "^3.3.4",
-    "vue-router": "4"
+    "vue-router": "4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.20",
