--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.4.30",
     "radix-vue": "^1.5.3",
     "sass": "^1.55.0",
+    "shadcn-vue": "^0.10.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
