--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ end_of_line = lf
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{js,json,vue,scss,rb,haml,yml}]
+[*.{js,json,vue,scss,rb,haml,yml,ts}]
 indent_size = 2
 
 [*.{js,json,vue,scss,rb,haml,yml,md}]
